[tool.poetry]
name = "finalproject-naydanov-leonid"
version = "0.1.0"
description = "Currency wallet console app"
authors = ["Leonid Naydanov <najdanov.2020@stud.nstu.ru>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
prettytable = "*"
requests = "^2.32.5"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.valutatrade]
exchangerate_api_key = "ваш_ключ"
data_path = "data"
rates_ttl_seconds = 300
default_base_currency = "USD"
log_file = "logs/actions.log"
